syntax = "proto3";
package com.protocol.grpc;

message SayPingRequest{         //fields for request
  string gameName = 3;
  string pingWord = 1;
}

message SayPongResponse{        //fields for Response
  string pongWord = 2;
  string gameDescription = 4;
}

service PingPongService{
  rpc say(SayPingRequest) returns (SayPongResponse);  //we say: when you will obtain a response then return the response
}